Display app title.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Calendar Lookup</string>
+  <string name="app_name">中西历查询</string>
   
   <!--  SearchActivity -->
   <string name="settings">Settings</string>
