--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,27 +3,27 @@
   <string name="app_name">中西历查询</string>
   
   <!--  SearchActivity -->
-  <string name="settings">Settings</string>
-  <string name="about">About</string>  
-  <string name="search_entry_hint">1.1.1</string>
+  <string name="settings">设置</string>
+  <string name="about">关于</string>  
+  <string name="search_entry_hint">请输入中历或西历纪年、纪月或纪日</string>
   
   <!--  Activity Settings -->
-  <string name="appearance_preference">Appearance</string>
-  <string name="theme_title_preference">Theme</string>
-  <string name="theme_dialog_title_preference">Theme</string>
+  <string name="appearance_preference">显示</string>
+  <string name="theme_title_preference">主题</string>
+  <string name="theme_dialog_title_preference">主题</string>
   <string-array name="theme_entries_preference">
-    <item>Dark</item>
-  	<item>Light</item>
+    <item>深色</item>
+    <item>浅色</item>
   </string-array>
   <string-array name="theme_values_preference">
     <item>0</item> 
     <item>1</item> 
   </string-array>
-  <string name="language_title_preference">Language for metro info</string>
-  <string name="language_dialog_title_preference">Language</string>
+  <string name="language_title_preference">中文显示</string>
+  <string name="language_dialog_title_preference">中文显示</string>
   <string-array name="language_entries_preference">
-    <item>Simplified Chinese</item>
-    <item>Traditional Chinese</item>
+    <item>简体中文</item>
+    <item>繁体中文</item>
   </string-array>
   <string-array name="language_values_preference">
     <item>simplified</item> 
@@ -31,15 +31,15 @@
   </string-array>
     
   <!-- Activity About -->
-  <string name="whats_new">What\'s new</string>
-  <string name="changelog">Changelog</string>
-  <string name="help_and_faq">Help &amp; FAQ</string>
-  <string name="other_programs">Other programs</string>
+  <string name="whats_new">更新内容</string>
+  <string name="changelog">更新日志</string>
+  <string name="help_and_faq">帮助与常见问题</string>
+  <string name="other_programs">开发者的其他应用</string>
   <string name="about_html">
     <![CDATA[
     <html>
       <body>
-        <center><h3>Calendar Lookup v0.0.1</h3></center>
+        <center><h3>中西历查询 v0.0.1</h3></center>
         <center><h4>Copyright &copy; 2013 Yujian Zhang</h4></center>
         <center><h4>License: <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a></h4></center>
       </body>
